...
            labelText?.let { Text(text = it) }
        },
        trailingIcon = {
            if (fieldState.text.isNotEmpty())
                Icon(
                    painter = painterResource(Res.drawable.cancel),
                    contentDescription = "clear text field",
                    modifier = Modifier.clickable {
                        fieldState.clearText()
                    }
                )
        },
        supportingText = {
...
