...
        },
        trailingIcon = {
            Icon(
                painter = painterResource(
                    if (isVisible) Res.drawable.visibility_off else Res.drawable.visibility
                ),
                contentDescription = "toggle password visibility",
                modifier = Modifier.clickable { isVisible = !isVisible }
            )
        },
        textObfuscationMode = if (isVisible) TextObfuscationMode.Visible
        else TextObfuscationMode.RevealLastTyped,
        supportingText = {
...
